mdapi_output_dir/objects/Train__c.object
<CustomObject>
    <label>Train</label>
    <nameField>
        <displayFormat>TIT-{0000}</displayFormat>
        <label>Train Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trains</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Arrival__c</fullName>
        <label>Arrival</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High speed train</fullName>
                    <default>true</default>
                    <label>High speed train</label>
                </value>
                <value>
                    <fullName>Low speed train</fullName>
                </value>
                <value>
                    <fullName>Mule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Couch_Class_Price__c</fullName>
        <label>Couch Class Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <label>Departure</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Class_Price__c</fullName>
        <label>First Class Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>From</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>From</relationshipLabel>
        <relationshipName>From</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To</label>
        <referenceTo>Station__c</referenceTo>
        <relationshipLabel>To</relationshipLabel>
        <relationshipName>To</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Trains</fullName>
        <columns>NAME</columns>
        <columns>From__c</columns>
        <columns>To__c</columns>
        <columns>Departure__c</columns>
        <columns>Arrival__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Trains</label>
    </listViews>
</CustomObject>